# quant-agent

./: .gitignore  EVALUATION.md  README.md  RESULTS.md  REVIEW.md  pyproject.toml
configs/: default.yaml
configs/ips/: default.yaml
configs/variants/: v1_baseline.yaml  v2_no_reversal.yaml  v3_smoothed.yaml  v4_sticky.yaml  v5_signal_weighted.yaml
src/quant_agent/: __init__.py  agent.py  agent_tools.py  backtest.py  calibration.py  cli.py  cost_models.py  data.py  features.py  io_utils.py  ips.py  journal.py  metrics.py  neutralize.py  optimization.py  orchestrator.py  prompt_history.py  review.py  risk.py  sandbox.py  signals.py  universe.py
src/quant_agent/agents/: __init__.py  alpha.py  base.py  cost_risk.py  critic.py  meta.py  portfolio.py
tests/: conftest.py  test_agent_tools.py  test_backtest.py  test_calibration.py  test_cost_models.py  test_data_cache.py  test_features.py  test_ips.py  test_journal.py  test_membership.py  test_meta_cycle.py  test_neutralize.py  test_optimization.py  test_prompt_history.py  test_risk.py  test_sandbox.py  test_signals.py  test_weighting.py
