[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-agent"
version = "0.1.0"
description = "AI quant research agent — deterministic pipeline layer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "pyarrow>=15.0",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "click>=8.1",
    "lxml>=5.0",
    "requests>=2.31",
    "anthropic>=0.45.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
quant-agent = "quant_agent.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
